infra/modules/security_groups/main.tf
resource "aws_security_group" "alb_sg" {
    name        = "${var.env}-alb-sg"
    description = "inbound HTTP/HTTPS"
    vpc_id      = var.vpc_id

    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = { Name = "${var.env}-alb-sg" }
}

resource "aws_security_group" "ecs_sg" {
    name        = "${var.env}-ecs-sg"
    description = "traffic from ALB"
    vpc_id      = var.vpc_id

    ingress {
        from_port       = 80
        to_port         = 80
        protocol        = "tcp"
        security_groups = [aws_security_group.alb_sg.id]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = { Name = "${var.env}-ecs-sg" }
}

resource "aws_security_group" "rds_sg" {
    name        = "${var.env}-rds-sg"
    description = "traffic from ECS"
    vpc_id      = var.vpc_id

    ingress {
        from_port       = 5432
        to_port         = 5432
        protocol        = "tcp"
        security_groups = [aws_security_group.ecs_sg.id]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = { Name = "${var.env}-rds-sg" }
}
